--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,8 @@ q:after {
   --dark-blue: hsla(209, 100%, 30%, 1);
   --black: 000;
   --standard-font: 'Lato', sans-serif;
-
+  --footer-height-pc: 4rem;
+  --header-block-height-pc: 33vh;
 }
 
 
@@ -197,7 +198,7 @@ body {
 }
 
 #header-color-block {
-  height: 33vh;
+  height: var(--header-block-height-pc);
   width: 75vw;
   text-align: center;
   background: var(--med-blue);
@@ -243,7 +244,7 @@ body {
 }
 
 #footer {
-	height: 4rem;
+	height: var(--footer-height-pc);
 	display: flex;
 	width: 100%;
 	position: fixed;
@@ -265,6 +266,25 @@ height: 75vh;
 bottom: 4rem;
 position: fixed;
 z-index: -1;
+}
+
+.painting {
+  position: absolute;
+  bottom: var(--footer-height-pc);
+  width: 40%;
+  height: auto;
+  box-shadow: 0 0 80px var(--platinum);
+  border-radius: 0.5rem;
+  border: 1rem solid var(--platinum);
+  max-height: var(--header-block-height-pc);
+}
+
+#painting-1 {
+  right: 5%;
+}
+
+#painting-2 {
+  left: 5%;
 }
 
 
