--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,45 @@ ul {
   padding: 1rem;
 }
 
+#mobile-background {
+  position: absolute;
+  margin-top: 5vh;
+  height: 85vh;
+  width: 85vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background: var(--med-blue);
+  background: linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
+  background: -moz-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
+  background: -webkit-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
+  align-items: center;
+
+}
+
+#mobile-background p {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.mobile-button {
+  background: var(--orange-transp);
+  padding: 1rem;
+  margin: 1rem;
+  width: 50vw;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+}
+
+.mobile-button a {
+  color: var(--platinum);
+}
+
+.mobile-button:hover {
+  background: var(--orange);
+}
+
+
 /*tablet correction*/
 @media screen and (max-width: 800px) {
   html {
