--- a/styles.css
+++ b/styles.css
@@ -172,219 +172,47 @@ q:after {
 
 :root {
   /* CSS HSL */
-  --orange: hsla(13, 90%, 51%, 1);
-  --orange-transp: hsla(13, 90%, 51%, 0.8);
-  --platinum: hsla(0, 0%, 92%, 1);
-  --silver: hsla(0, 0%, 75%, 1);
-  --med-blue: hsla(211, 48%, 44%, 1);
-  --transp-blue: hsla(211, 48%, 44%, 0.3);
-  --transp-dark-blue: hsla(209, 100%, 30%, 0.3);
-  --dark-blue: hsla(209, 100%, 30%, 1);
-  --black: 000;
+  --blue:  #1797c6;
   --standard-font: 'Lato', sans-serif;
-  --footer-height-pc: 4rem;
-  --header-block-height-pc: 33vh;
-  --header-width-pc: 75vw;
-  --background-color-width-pc: 77vw;
+  --white: #f3f2ee;
 }
-
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: var(--platinum);
-  background: linear-gradient(180deg, var(--platinum) 51%, var(--silver) 93%);
-  background: -moz-linear-gradient(180deg, var(--platinum) 51%, var(--silver) 93%);
-  background: -webkit-linear-gradient(180deg, var(--platinum) 51%, var(--silver) 93%);
-  color: var(--platinum);
+  background-color: var(--blue);
+  color: var(--white);
   font-family: var(--standard-font);
-}
-
-#header-color-block {
-  height: var(--header-block-height-pc);
-  width: var(--header-width-pc);
-  text-align: center;
-  background: var(--med-blue);
-  background: linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -moz-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -webkit-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
+  position: absolute;
+  width: 100%;
 
 }
 
-
-
-#name_holder {
-  width: 75vw;
-  height: 33vh;
-
-  font-size: 4rem;
-
+h1 {
+  font-size: 4vh;
+  padding-bottom: 1vh;
 }
 
-.top-nav-button {
-  background: var(--orange-transp);
-  padding: 1rem;
-  flex-basis: 30%; /*equal size*/
-  border-radius: 0.5rem;
-  font-size: 2rem;
+p {
+  font-size: 2vh;
+  padding-bottom: 1vh;
 }
 
-#top-navigation a {
-  color: var(--platinum);
-}
-
-#top-navigation a:hover {
-  background: var(--orange);
-}
-
-#top-navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  border-bottom: 4px solid var(--platinum);
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-#footer {
-	height: var(--footer-height-pc);
-	display: flex;
-	width: 100%;
-	position: fixed;
-	bottom:0;
-	text-align: right;
-	flex-flow: column;
-	justify-content: space-around;
-  background: var(--med-blue);
-  background: linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -moz-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -webkit-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-	color: var(--platinum);
-	border-top: 0.5rem solid var(--orange);
-}
-
-.background-color {
-  background: var(--transp-blue);
-  background: linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
-  background: -moz-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
-  background: -webkit-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
-  margin-top: 1rem;
-  border-radius: 0.5rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  text-align: justify;
-  color: var(--dark-blue);
-  font-size: 2rem;
-  width: var(--background-color-width-pc);
-  padding: 1rem;
-}
-
-.background-color p {
-  margin-bottom: 1rem;
-}
-
-.background-color li {
-  margin-bottom: 1rem;
-}
-
-ul {
-  margin-left: 50px;
-  margin-bottom: 3rem;
-  text-align: justify;
-}
-
-#swirls {
+img {
+  height: 80vh;
   width: auto;
-  height: 75vh;
-  bottom: 4rem;
-  position: fixed;
-  z-index: -1;
+  padding-bottom: 1vh;
 }
 
-.painting {
-  position: absolute;
-  bottom: var(--footer-height-pc);
-  width: 40%;
-  height: auto;
-  box-shadow: 0 0 80px var(--platinum);
-  border-radius: 0.5rem;
-  border: 1rem solid var(--platinum);
-  max-height: var(--header-block-height-pc);
-}
-
-#painting-1 {
-  right: 5%;
-}
-
-#painting-2 {
-  left: 5%;
-}
-
-.motto {
-  color: var(--orange);
-  font-size: 4rem;
-  padding: 2rem;
-}
-
-.button {
-  background-color: var(--med-blue);
-  border-radius: 0.5rem;
-  font-size: 2rem;
-  padding: 1rem;
-}
-
-#mobile-background {
-  position: absolute;
-  margin-top: 5vh;
-  height: 85vh;
-  width: 85vw;
+#allstuff {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  background: var(--med-blue);
-  background: linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -moz-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  background: -webkit-linear-gradient(45deg, var(--med-blue) 51%, var(--dark-blue) 93%);
-  align-items: center;
-
+  position: relative;
 }
 
-#mobile-background p {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-
-.mobile-button {
-  background: var(--orange-transp);
-  padding: 1rem;
-  margin: 1rem;
-  width: 50vw;
-  border-radius: 0.5rem;
-  font-size: 2rem;
-}
-
-.mobile-button a {
-  color: var(--platinum);
-}
-
-.mobile-button:hover {
-  background: var(--orange);
-}
-
-
-/*tablet correction*/
-@media screen and (max-width: 800px) {
-  html {
-    font-size: 60%;
-  }
-}
-
-/*cell corrections:*/
 @media screen and (max-width: 415px) {
   html {
     font-size: 55%;
+  }
+  img{
+    max-width: 97%;
+    height: auto;
   }
 }
