--- a/styles.css
+++ b/styles.css
@@ -172,47 +172,189 @@ q:after {
 
 :root {
   /* CSS HSL */
-  --blue:  #1797c6;
+  --blue: hsla(196, 79%, 43%,1);
+  --white: hsla(48, 17%, 94%, 1);
+  --brown: hsla(22, 30%, 18%,1);
+  --yellow: hsla(35, 81%, 71%,1);
+  --green: hsla(79, 50%, 75%, 1);
+
+
+  --orange: hsla(13, 90%, 51%, 1);
+  --orange-transp: hsla(13, 90%, 51%, 0.8);
+  --platinum: hsla(0, 0%, 92%, 1);
+  --silver: hsla(0, 0%, 75%, 1);
+  --med-blue: hsla(211, 48%, 44%, 1);
+  --transp-blue: hsla(211, 48%, 44%, 0.3);
+  --transp-dark-blue: hsla(209, 100%, 30%, 0.3);
+  --dark-blue: hsla(209, 100%, 30%, 1);
+  --black: 000;
   --standard-font: 'Lato', sans-serif;
-  --white: #f3f2ee;
+  --footer-height-pc: 4rem;
+  --header-block-height-pc: 33vh;
+  --header-width-pc: 75vw;
+  --background-color-width-pc: 77vw;
 }
+
 
 body {
-  background-color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--blue);
   color: var(--white);
   font-family: var(--standard-font);
-  position: absolute;
-  width: 100%;
-
 }
 
-h1 {
-  font-size: 4vh;
-  padding-bottom: 1vh;
-}
-
-p {
-  font-size: 2vh;
-  padding-bottom: 1vh;
-}
-
-img {
-  height: 80vh;
-  width: auto;
-  padding-bottom: 1vh;
-}
-
-#allstuff {
+#header-color-block {
+  height: var(--header-block-height-pc);
+  width: var(--header-width-pc);
   text-align: center;
-  position: relative;
+  background: linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -moz-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -webkit-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
 }
 
+
+
+#name_holder {
+  width: 75vw;
+  height: 33vh;
+  font-size: 4rem;
+
+}
+
+.top-nav-button {
+  background: var(--yellow);
+  color: var(--brown);
+  padding: 1rem;
+  flex-basis: 30%; /*equal size*/
+  border-radius: 0.5rem;
+  font-size: 2rem;
+}
+
+#top-navigation a {
+  color: var(--brown);
+}
+
+#top-navigation a:hover {
+  background: var(--brown);
+  color: var(--white);
+}
+
+#top-navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-bottom: 4px solid var(--platinum);
+  margin-left: 4px;
+  margin-right: 4px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+#footer {
+	height: var(--footer-height-pc);
+	display: flex;
+	width: 100%;
+	position: fixed;
+	bottom:0;
+	text-align: right;
+	flex-flow: column;
+	justify-content: space-around;
+	color: var(--white);
+	border-top: 0.5rem solid var(--green);
+}
+
+.background-color {
+  background: var(--transp-blue);
+  background: linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -moz-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -webkit-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  margin-top: 1rem;
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  text-align: justify;
+  color: var(--green);
+  font-size: 2rem;
+  width: var(--background-color-width-pc);
+  padding: 1rem;
+}
+
+.background-color p {
+  margin-bottom: 1rem;
+}
+
+.background-color li {
+  margin-bottom: 1rem;
+}
+
+ul {
+  margin-left: 50px;
+  margin-bottom: 3rem;
+  text-align: justify;
+}
+
+#swirls {
+  width: auto;
+  height: 75vh;
+  bottom: 4rem;
+  position: fixed;
+  z-index: -1;
+}
+
+.painting {
+  position: absolute;
+  bottom: var(--footer-height-pc);
+  width: 40%;
+  height: auto;
+  box-shadow: 0 0 80px var(--platinum);
+  border-radius: 0.5rem;
+  border: 1rem solid var(--platinum);
+  max-height: var(--header-block-height-pc);
+}
+
+#painting-1 {
+  right: 5%;
+}
+
+#painting-2 {
+  left: 5%;
+}
+
+.motto {
+  color: var(--brown);
+  font-size: 4rem;
+  padding: 2rem;
+}
+
+.button {
+  background: var(--transp-blue);
+  background: linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -moz-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  background: -webkit-linear-gradient(45deg, var(--transp-blue) 51%, var(--transp-dark-blue) 93%);
+  color: var(--green);
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  padding: 1rem;
+}
+
+/*tablet correction*/
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 60%;
+  }
+
+  .background-color {
+    margin-bottom: var(--footer-height-pc);
+  }
+}
+
+/*cell corrections:*/
 @media screen and (max-width: 415px) {
   html {
     font-size: 55%;
   }
-  img{
-    max-width: 97%;
-    height: auto;
-  }
+
+
 }
